# denialops

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
data/samples/: coding_error_denial_001.txt  medical_necessity_denial_001.txt  pa_denial_001.txt
docs/: code-patterns-explained.md  engineering-deep-dive.md  eval.md  implementation-plan.md  interview-topics.md  learning-exercises.md  learning-path.md  phase-2-learnings.md  phase-3-learnings.md  phase-4-learnings.md  phase-5-learnings.md  spec.md  technical-architecture.md  threat-model.md
schemas/: action_plan.schema.json  case_facts.schema.json  plan_rules.schema.json  route.schema.json
src/denialops/: __init__.py  config.py  main.py
src/denialops/api/: __init__.py  dependencies.py  health.py  routes.py  streaming.py  tasks.py
src/denialops/cache/: __init__.py  base.py  memory.py  redis.py
src/denialops/llm/: __init__.py  cached_client.py  client.py  prompts.py  streaming.py
src/denialops/models/: __init__.py  action_plan.py  case.py  documents.py  eob.py  plan_rules.py  route.py
src/denialops/pipeline/: __init__.py  extract_eob.py  extract_facts.py  extract_plan_rules.py  extract_text.py  generate_docs.py  generate_plan.py  llm_generation.py  router.py
src/denialops/tasks/: __init__.py  manager.py  pipeline.py
src/denialops/utils/: __init__.py  storage.py  validation.py
tests/: __init__.py  conftest.py  test_api.py  test_cache.py  test_streaming.py  test_task_api.py  test_tasks.py
tests/test_pipeline/: test_extract_eob.py  test_extract_facts.py  test_extract_plan_rules.py  test_llm_generation.py  test_router.py
